# SHEQ_MANAGEMENT

./: .gitignore  README.md  _patch_home.py  activer_mode_developpeur_windows.bat  build_android_orezone_qhse_mobile.bat  build_android_orezone_qhse_mobile.ps1  build_exe_orezone_qhse.bat  build_exe_orezone_qhse.ps1  build_exe_orezone_qhse_mobile.bat  build_exe_orezone_qhse_mobile.ps1  cahier_charges_complet_gestion_intelligente_entreprise.docx  install_orezone_qhse.bat  install_orezone_qhse.ps1  installer_orezone_qhse.bat  installer_orezone_qhse.ps1  lancer_orezone_qhse_mobile.bat  lancer_orezone_qhse_silencieux.vbs  main.py  mobile_app.py  mobile_launcher.py  nettoyer_anciens_builds.bat  nettoyer_anciens_builds.ps1  preparer_android_orezone_qhse_mobile.bat  preparer_android_orezone_qhse_mobile.ps1  preparer_flutter_android_flet.bat  preparer_flutter_android_flet.ps1  pyproject.toml  reinitialiser_base_orezone_qhse.bat  reinitialiser_base_orezone_qhse.ps1  requirements-build.txt  requirements-dev.txt  telecharger_jdk17_temurin.bat  telecharger_jdk17_temurin.ps1  update_orezone_qhse.bat  update_orezone_qhse.ps1
app/: config.py
docs/: CAHIER_DES_CHARGES_OREZONE_MIS_A_JOUR.md  MANUEL_INSTALLATION_UTILISATION.md  MOBILE_OFFLINE_ANDROID.md
scripts/: replace_employees_from_timesheet_image.py  validate_release.py
tests/: test_admin_service.py  test_ai_service.py  test_alert_service.py  test_attendance_service.py  test_automation_service.py  test_break_service.py  test_dashboard_service.py  test_email_service.py  test_employee_service.py  test_equipment_check_service.py  (+11 more)
(+103 files in other folders)
