[project]
name = "orezone-qhse"
version = "2026.6.1"
description = "Application QHSE locale offline-first"
requires-python = ">=3.12"
dependencies = [
    "flet==0.84.0",
    "reportlab==4.4.9",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["build*", "dist*", "tools", ".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.coverage.run]
source = ["app"]
omit = ["app/ui/*"]
